--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <div style="clear: both;"/>
 <footer class="site-footer">
-    2020 &copy; Built by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> and <a href="https://github.com/jekyll/minima/" target="_blank">minima</a> | View this on Github <a href="https://github.com/asanakoy/asanakoy.github.io/" target="_blank">this</a>  | <a href="{{ '/tags.html' | relative_url }}">Tags</a> | <a href="/">About me</a> 
+    2020 &copy; Built by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> and <a href="https://github.com/jekyll/minima/" target="_blank">minima</a> | <a href="{{ '/tags.html' | relative_url }}">Tags</a> | <a href="/">About me</a> 
 
     <p>
         <!--
