add thumbnails, add new fonts, add Kaggle Lyft post

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -45,6 +45,7 @@
 
     <link rel="shortcut icon" href="{{ '/assets/favicon.ico' | relative_url }}">
     <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
+    <link rel="stylesheet" href="{{ '/assets/css/fonts_from_medium.css' | relative_url }}">
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
 
     <!-- For Latex -->
