add RSS and change the title

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,5 +17,8 @@
         <a href="https://twitter.com/artsiom_s/" target="_blank">
             <img src="{{ '/assets/images/logo_twitter.png' | relative_url }}" />
         </a>
+        <a href="https://t.me/gradientdude/" target="_blank">
+            <img src="{{ '/assets/images/logo_tg.png' | relative_url }}" />
+        </a>
     </p>
 </footer>
