--- a/_includes/head.html
+++ b/_includes/head.html
@@ -47,6 +47,10 @@
     <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
     <link rel="stylesheet" href="{{ '/assets/css/fonts_from_medium.css' | relative_url }}">
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
+    
+
+    <!-- tell the browsers that we have a web feed -->
+    <link rel="alternate" type="application/rss+xml" href="{{ '/feed.xml' | relative_url }}">
 
     <!-- For Latex -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
