--- a/_includes/head.html
+++ b/_includes/head.html
@@ -76,7 +76,7 @@
     <meta name="twitter:site"    content="@{{ site.twitter_username }}">
     <meta name="twitter:creator" content="@{{ site.author }}">
     <meta name="twitter:title"   content="{{ page.title }}">
-
+            
     {% if page.excerpt %}
         <meta name="twitter:description" content="{{ page.excerpt }}">
     {% else %}
@@ -87,6 +87,10 @@
         <meta name="twitter:card"  content="summary_large_image">
         {% assign rel_path = '/assets/images/' | append: page.image %}
         <meta name="twitter:image" content="{{ rel_path | relative_url }}">
+    {% elsif page.thumbnail %}
+        <meta name="twitter:card"  content="summary_large_image">
+        <meta property="og:image" content="{{ page.thumbnail | relative_url }}" />
+        <meta name="twitter:image" content="{{ page.thumbnail | relative_url }}">
     {% else %}
         <meta name="twitter:card"  content="summary">
         <meta name="twitter:image" content="{{ site.title_image }}">
