--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 
     <div class="wrapper">
         {% assign default_paths = site.pages | map: "path" %}
-        <a class="site-title" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
+        <a class="site-title" href="{{ "/" | relative_url }}"><img style="display:inline; height:2em;" src="{{ '/assets/images/gradient_dude_logo_circle_no_font.png' | relative_url }}"> {{ site.title | escape }}</a>
 
         <nav class="site-nav">
             <a class="page-link" href="/" target="_blank">About</a>
