--- a/_includes/head.html
+++ b/_includes/head.html
@@ -43,7 +43,7 @@
         {% endfor %}
     {% endif %}
 
-    <link rel="shortcut icon" href="{{ '/assets/favicon.ico' | relative_url }}">
+    <link rel="shortcut icon" href="{{ '/assets/favicon.png' | relative_url }}">
     <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
     <link rel="stylesheet" href="{{ '/assets/css/fonts_from_medium.css' | relative_url }}">
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
