--- a/_includes/head.html
+++ b/_includes/head.html
@@ -74,8 +74,12 @@
 
     <!-- Twitter cards -->
     <meta name="twitter:site"    content="@{{ site.twitter_username }}">
-    <meta name="twitter:creator" content="@{{ site.author }}">
-    <meta name="twitter:title"   content="{{ page.title }}">
+    <meta name="twitter:creator" content="@{{ site.twitter_username }}">
+    {% if page.title %}
+        <meta name="twitter:title"   content="{{ page.title }}">
+    {% else %}
+        <meta name="twitter:title"   content="{{ site.title }}">
+    {% endif %}
             
     {% if page.excerpt %}
         <meta name="twitter:description" content="{{ page.excerpt }}">
@@ -85,8 +89,8 @@
 
     {% if page.image %}
         <meta name="twitter:card"  content="summary_large_image">
-        {% assign rel_path = '/assets/images/' | append: page.image %}
-        <meta name="twitter:image" content="{{ rel_path | relative_url }}">
+        <meta name="twitter:image" content="{{ page.image | absolute_url }}">
+        <meta property="og:image" content="{{ page.image | absolute_url }}" />
     {% elsif page.thumbnail %}
         <meta name="twitter:card"  content="summary_large_image">
         <meta name="twitter:image" content="{{ page.thumbnail | absolute_url }}">
