--- a/_includes/head.html
+++ b/_includes/head.html
@@ -97,7 +97,7 @@
         <meta property="og:image" content="{{ page.thumbnail | absolute_url }}" />
     {% else %}
         <meta name="twitter:card"  content="summary">
-        <meta name="twitter:image" content="{{ site.title_image }}">
+        <meta name="twitter:image" content="{{ site.title_image | absolute_url }}">
     {% endif %}
     <!-- end of Twitter cards -->
 
