add title_image for main page

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -98,6 +98,7 @@
     {% else %}
         <meta name="twitter:card"  content="summary">
         <meta name="twitter:image" content="{{ site.title_image | absolute_url }}">
+        <meta property="og:image" content="{{ site.title_image | absolute_url }}" />
     {% endif %}
     <!-- end of Twitter cards -->
 
