--- a/_includes/head.html
+++ b/_includes/head.html
@@ -28,18 +28,15 @@
     <meta property="og:type" content="{{ local_content_name }}" >
     
     {% if page.url %}
-        <meta content="{{ page.url | absolute_url }}" property="og:url">
+        <meta property="og:url" content="{{ page.url | absolute_url }}" >
     {% endif %}
     {% if page.date %}
-        <meta content="{{ page.date | date_to_xmlschema }}" property="article:published_time">
-        <meta content="{{ site.url }}/about/" property="article:author">
-    {% endif %}
-    {% if page.image %}
-        <meta content="/img/srcset/{{ page.image }}" property="og:image">
+        <meta property="article:published_time" content="{{ page.date | date_to_xmlschema }}" >
+        <meta property="article:author" content="{{ site.url }}" >
     {% endif %}
     {% if page.tags %}
         {% for tag in page.tags %}
-        <meta content="{{ tag }}" property="article:tag">
+        <meta property="article:tag" content="{{ tag }}" >
         {% endfor %}
     {% endif %}
 
@@ -51,13 +48,8 @@
     <!-- Twitter cards -->
     <meta name="twitter:site"    content="@{{ site.twitter_username }}">
     <meta name="twitter:creator" content="@{{ site.twitter_username }}">
-    <meta name="twitter:title"   content="{{ local_title }}">
-            
-    {% if page.excerpt %}
-        <meta name="twitter:description" content="{{ page.excerpt }}">
-    {% else %}
-        <meta name="twitter:description" content="{{ site.description }}">
-    {% endif %}
+    <meta name="twitter:title"   content="{{ local_title }}">      
+    <meta name="twitter:description" content="{{ local_description }}">
     {% if page.image %}
         <meta name="twitter:card"  content="summary_large_image">
         {% assign local_image_url = page.image | absolute_url %}
